# src/main/resources/META-INF/swagger/guesto-1.0.yml
@@ -72,6 +72,88 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GuestDTO'
+  /event/{eventId}/guests:
+    get:
+      tags:
+      - Events
+      summary: List All Guests
+      description: Lists all guests for the specified event.
+      operationId: listAllGuests
+      parameters:
+      - name: eventId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: listAllGuests 200 response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GuestDTO'
+  /event/{eventId}/guests/{guestId}:
+    put:
+      tags:
+      - Events
+      summary: Update Guest in Event
+      description: Updates a guest in the specified event's guest list.
+      operationId: updateGuestInEvent
+      parameters:
+      - name: eventId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: guestId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GuestDTO'
+        required: true
+      responses:
+        "200":
+          description: updateGuestInEvent 200 response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GuestDTO'
+    delete:
+      tags:
+      - Events
+      summary: Delete Guest from Event
+      description: Deletes a guest from the specified event's guest list.
+      operationId: deleteGuestFromEvent
+      parameters:
+      - name: eventId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: guestId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: deleteGuestFromEvent 200 response
+          content:
+            application/json:
+              schema:
+                type: object
   /event/{id}:
     put:
       tags:
@@ -137,7 +219,8 @@ paths:
         content:
           application/json:
             schema:
-              type: string
+              type: integer
+              format: int64
         required: true
       responses:
         "200":
@@ -297,13 +380,9 @@ components:
       required:
       - additionalGuests
       - firstName
-      - id
       - lastName
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
         firstName:
           type: string
         lastName:
